--- a/index.html
+++ b/index.html
@@ -5,37 +5,18 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1, user-scalable=0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Space+Grotesk:wght@400;500&display=swap" rel="stylesheet">
     <title>Dark Universe</title>
-    <style>
-      body {
-        overflow: hidden;
-        margin: 0;
-        background-color: black;
-      }
-      .title {
-        color: #BCBCBC;
-        position: absolute;
-        right: 5%;
-        top: 8%;
-        font-family: 'Roboto', sans-serif;
-        font-size: max(1.5vw, 15px);
-        text-align: right;
-      }
-      h1 {
-        font-weight: 900;
-        margin: 0;
-      }
-      h4 {
-        font-weight: 400;
-        margin: 0;
-      }
-    </style>
+    <link href="./styles.css" rel="stylesheet">
   </head>
-  <body>
-    <div class="title">
+  <body class="not-ready">
+    <div id="frame">
+      <div></div>
+      <div></div>
       <h1>Dark Universe</h1>
-      <h4>A three.js sketch</h4>
+      <h4>
+        three.js sketch by <a target="_blank" href="" >liamlkh</a>
+      </h4>
     </div>
   </body>
   <script type="module" src="./script.js"></script>
