--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div></div>
       <h1>Dark Universe</h1>
       <h4>
-        three.js sketch by <a target="_blank" href="https://liamlkh.github.io/" >liamlkh</a>
+        three.js sketch by <a target="_blank" href="https://liamlkh.github.io/portfolio-site/" >liamlkh</a>
       </h4>
     </div>
   </body>
